# TGAEngine

./: .gitignore  CMakeLists.txt
VS2010/: TGAEngine.lib  TGAEngine.sln  TGAEngine.vcxproj  TGAEngine.vcxproj.filters  premake4.lua
XCode/: premake4.lua
XCode/TGAEngine.xcodeproj/: project.pbxproj
XCode/TGAEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XCode/TGAEngine.xcodeproj/project.xcworkspace/xcuserdata/tgashby.xcuserdatad/: UserInterfaceState.xcuserstate
XCode/TGAEngine.xcodeproj/xcuserdata/tgashby.xcuserdatad/xcschemes/: TGAEngine.xcscheme  xcschememanagement.plist
include/: Animation.h  AnimationManager.h  App.h  BoundingBox.h  Camera.h  Collidable.h  Collision.h  Engine.h  GraphicsManager.h  InputManager.h  Key.h  Music.h  ProjIncludes.h  Singleton.h  Sound.h  SoundManager.h  State.h  StateManager.h  Texture.h  TextureManager.h  Timer.h  Vector2D.h
lib/SDL_2.0/: CL.read.1.tlog  CL.write.1.tlog  SDL.exp  SDL.lastbuildstate  SDL.lib  SDL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
lib/SDL_image/: CL.read.1.tlog  CL.write.1.tlog  SDL_image.exp  SDL_image.lastbuildstate  SDL_image.lib  SDL_image.write.1.tlog  SDL_image_manifest.rc  Version.res  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
lib/SDL_mixer/: CL.read.1.tlog  CL.write.1.tlog  SDL_mixer.exp  SDL_mixer.lastbuildstate  SDL_mixer.lib  SDL_mixer.write.1.tlog  SDL_mixer_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
lib/sdl-1.3/Apple/: libSDL-1.3.0.dylib  libSDL.la
lib/sdl-1.3/Win32/: SDL.lib  SDLmain.lib
src/: Animation.cpp  AnimationManager.cpp  BoundingBox.cpp  Camera.cpp  Collidable.cpp  Collision.cpp  Engine.cpp  GraphicsManager.cpp  InputManager.cpp  Music.cpp  Sound.cpp  SoundManager.cpp  StateManager.cpp  Texture.cpp  TextureManager.cpp  Timer.cpp  Vector2D.cpp
